--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,11 @@
-body{
+body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #121212;
   color: #fafafa;
-};
+}
 
 a {
   color: #fafafa;
